Config File Update

--- a/src/GatherContent.Connector.Website/App_Config/Include/GatherContent.Connector.config
+++ b/src/GatherContent.Connector.Website/App_Config/Include/GatherContent.Connector.config
@@ -7,7 +7,9 @@
       </event>
     </events>
     <settings>
-      <setting name="GatherContent.MediaLibrary.MainFolder" value="/sitecore/media library/POIS"/>
+      <setting name="GatherContent.MediaLibrary.MainFolder" value="/sitecore/media library/DCTCM/POIS"/>
+      <setting name="GatherContent.MediaLibrary.EventFolder" value="/sitecore/media library/DCTCM/Events"/>
+      <setting name="GatherContent.MediaLibrary.DealsFolder" value="/sitecore/media library/DCTCM/Deals"/>
     </settings>
     <commands>
       <command name="gc:sync" type="GatherContent.Connector.Website.Commands.UpdateCommand, GatherContent.Connector.Website"/>
